Fix livestream video embed with on mobile
This way it doesn't cause a horizontal scroll.

--- a/_sass/modules/_meetup.sass
+++ b/_sass/modules/_meetup.sass
@@ -41,6 +41,10 @@
     @media (max-width: 790px)
       font-size: 22px
 
+.livestream
+  iframe
+    max-width: 100%
+
 .program
   .entry
     display: grid
